--- a/app/templates/partials/navbar_content.html
+++ b/app/templates/partials/navbar_content.html
@@ -6,6 +6,9 @@
         <li class="nav-item">
           <a class="nav-link {% if currentPage == "profile" %}active{% endif %}" aria-current="page" href="/profile">Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {% if currentPage == "plants" %}active{% endif %}" aria-current="page" href="/plants">Plants</a>
+        </li>
     {% endif %}
 </ul>
 {% if not loggedIn %}
