Added Docker Stuff

--- a/app/templates/partials/navbar_content.html
+++ b/app/templates/partials/navbar_content.html
@@ -15,6 +15,9 @@
     <div class="btn-group d-flex" role="group" aria-label="Basic example">
         <a type="button" class="btn btn-outline-primary" href="/login">Log In</a>
     </div>
+    <div class="btn-group d-flex" role="group" aria-label="Basic example">
+        <a type="button" class="btn btn-outline-success" href="/signup">Sign Up</a>
+    </div>
 {% else  %}
     <div class="btn-group d-flex" role="group" aria-label="Basic example">
         <a type="button" class="btn btn-outline-danger" href="/logout">Log Out</a>
