Header and Footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,27 @@
 {% endblock %}
 
 {% block content %}
-<h1 style="text-align: center;">Smart Plants App</h1>
-<hr>
+
+<!-- Header Start here -->
+<div class="header d-flex justify-content-around">
+<h1 class="text-start"><i class="bi bi-gear-fill"></i></h1>
+<h1 class="text-center align-bottom">Smart Plants</h1>
+<h1 class="text-end"><i class="bi bi-person-circle"></i></h1>
+</div>
+<!-- Header End here -->
+
 Hello we are making smart plants
+
+<!-- Footer Start here -->
+<div class="footer d-flex justify-content-around">
+<button class="nav-button"><h2 class="text-center"><i class="bi bi-gear-fill"></i><p>Friends</p></h2></button>
+<button class="nav-button"><h2 class="text-center"><i class="bi bi-gear-fill"></i><p>Notifications</p></h2></button>
+<button class="nav-button"><h2 class="text-center"><i class="bi bi-gear-fill"></i><p>Home</p></h2></button>
+<button class="nav-button"><h2 class="text-center"><i class="bi bi-gear-fill"></i><p>Profile</p></h2></button>
+</div>
+<!-- Footer End here -->
+
+
 <br><br>
+<!-- End here -->
 {% endblock %}
