--- a/app/templates/layouts/layout.html
+++ b/app/templates/layouts/layout.html
@@ -7,6 +7,7 @@
             <title>{% block title %}{% endblock %}</title>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+            <link rel="stylesheet" href="/static/css/everything.css">
         {% endblock %}
     </head>
     <body>
@@ -23,7 +24,7 @@
             </div>
         </nav>
         {% endblock %}
-        <div class="container" style="margin-top: 20px;" id="content">
+        <div id="content">
             {% block content %}{% endblock %}
         </div>
         <script src="/static/js/utils.js"></script>
