plant status and welcome

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,10 @@
 </div>
 <!-- Header End here -->
 
-Hello we are making smart plants
+<div id="welcome">
+    <p>Hi [username]</p>
+    <p><i>your plants are [plant-percent-status]</i></p>
+</div>
 
 <!-- Footer Start here -->
 <div class="footer d-flex justify-content-around">
