--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,10 @@
     <p><i>your plants are [plant-percent-status]</i></p>
 </div>
 
+<div id="user-plants" class="flex-2-em-wd"> 
+    <div class="plant"></div>
+</div>
+
 <!-- Footer Start here -->
 <div class="footer d-flex justify-content-around">
 <button class="nav-button"><h2 class="text-center"><i class="bi bi-gear-fill"></i><p>Friends</p></h2></button>
