--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,9 +20,16 @@
     <p><i>your plants are [plant-percent-status]</i></p>
 </div>
 
-<div id="user-plants" class="flex-2-em-wd"> 
-    
+
+<div id="user-plants" class="row justify-content-around"> 
+    <h1>View Plants:</h1>
+    <div class="plant col-md-6 mb-3">plant 1</div>
+    <div class="plant col-md-6 mb-3">plant 2</div>
+    <div class="plant col-md-6 mb-3">plant 3</div>
+    <div class="plant-add col-md-6 mb-3 text-center"> + </div>
 </div>
+
+<div id="user-percent"></div> [user-score] 
 
 <!-- Footer Start here -->
 <div class="footer d-flex justify-content-around">
