--- a/app/templates/plants.html
+++ b/app/templates/plants.html
@@ -17,14 +17,22 @@
     <hr>
     <div class="container">
         <div class="d-flex justify-content-center">
-            <img src="/static/img/plamt.png">
+            <img src="/static/img/plamt.png" style="height: ">
         </div>
-        <p><strong>Spicy</strong> and <strong>Agressive</strong> Plant</p>
+        <p class="text-center"><strong>Spicy</strong> and <strong>Agressive</strong> Plant</p>
         <div>
             <div class="row align-items-center">
-                <div class="col-2"><i class="bi bi-droplet-fill" style="font-size: 40px;"></i></div>
+                <div class="col-1 text-end text-primary"><i class="bi bi-droplet-fill" style="font-size: 40px;"></i></div>
                 <div class="col-10">
-                    <div class="progress" style="height: 40px" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress" style="height: 40px" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar text-bg-primary" style="width: 75%">75%</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-1 text-end text-primary"><i class="bi bi-brightness-high-fill" style="font-size: 40px;"></i></div>
+                <div class="col-10">
+                    <div class="progress" style="height: 40px" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar text-bg-warning" style="width: 75%">75%</div>
                     </div>
                 </div>
