--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,13 +23,21 @@
 
 <div id="user-plants" class="row justify-content-around"> 
     <h1>View Plants:</h1>
-    <div class="plant col-md-6 mb-3">plant 1</div>
-    <div class="plant col-md-6 mb-3">plant 2</div>
-    <div class="plant col-md-6 mb-3">plant 3</div>
-    <div class="plant-add col-md-6 mb-3 text-center"> + </div>
+    <div class="plant col-md-6 mb-3 text-center">[plant-name] <br> [plant-type]
+    
+    </div>
+    <div class="plant col-md-6 mb-3 text-center">plant 2</div>
+    <div class="plant col-md-6 mb-3 text-center">plant 3</div>
+    <div class="plant-add col-md-6 mb-3 text-center" onclick="window.location = '/new_plant'"> + </div>
 </div>
 
-<div id="user-percent"></div> [user-score] 
+<br>
+<div id="user-percent">
+    <div class="progress custom-progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar custom-progress-bar" style="width: 80%">[user-score]</div>
+    </div>    
+</div> 
+<br>
 
 <!-- Footer Start here -->
 <div class="footer d-flex justify-content-around">
