--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,12 @@
 
 <div id="user-plants" class="row justify-content-around"> 
     <h1>View Plants:</h1>
-    <div class="plant col-md-6 mb-3 text-center">[plant-name] <br> [plant-type]
+    <div class="plant col-md-6 mb-3 text-center">
+        [plant-name] <br> 
+        [plant-type] <br>
+
+        
+
     
     </div>
     <div class="plant col-md-6 mb-3 text-center">plant 2</div>
@@ -41,10 +46,10 @@
 
 <!-- Footer Start here -->
 <div class="footer d-flex justify-content-around">
-<button class="nav-button"><h2 class="text-center"><i class="bi bi-people-fill"></i><p>Friends</p></h2></button>
-<button class="nav-button"><h2 class="text-center"><i class="bi bi-inbox-fill"></i><p>Notifications</p></h2></button>
-<button class="nav-button"><h2 class="text-center"><i class="bi bi-house-fill"></i><p>Home</p></h2></button>
-<button class="nav-button"><h2 class="text-center"><i class="bi bi-person-fill"></i><p>Profile</p></h2></button>
+<button class="nav-button" onclick="window.location = '/new_plant'"><h2 class="text-center"><i class="bi bi-people-fill"></i><p>Friends</p></h2></button>
+<button class="nav-button" onclick="window.location = '/new_plant'"><h2 class="text-center"><i class="bi bi-inbox-fill"></i><p>Notifications</p></h2></button>
+<button class="nav-button" onclick="window.location = '/'"><h2 class="text-center"><i class="bi bi-house-fill"></i><p>Home</p></h2></button>
+<button class="nav-button" onclick="window.location = '/new_plant'"><h2 class="text-center"><i class="bi bi-person-fill"></i><p>Profile</p></h2></button>
 </div>
 <!-- Footer End here -->
 
