--- a/app/templates/new_plant.html
+++ b/app/templates/new_plant.html
@@ -27,25 +27,25 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Default checkbox
+          My plant would defend me in battle
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Default checkbox
+          My plant would have a sweet tooth
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Default checkbox
+          My plant would care greatly about it’s appearance
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Default checkbox
+          My plant would sleep with a weighted blanket
         </label>
       </div>
 </form>
