--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,16 +23,38 @@
 
 <div id="user-plants" class="row justify-content-around"> 
     <h1>View Plants:</h1>
+
+    <!-- Example Plant -->
+<div id="fill-user-plants">
     <div class="plant col-md-6 mb-3 text-center">
+        <div class="plant-height d-flex flex-column justify-content-between">
+            <br>
         [plant-name] <br> 
         [plant-type] <br>
 
+        <div class="row align-items-center">
+            <div class="col-10">
+                <div class="progress" style="height: 40px" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar text-bg-primary" style="width: 75%">75%</div>
+                </div>
+            </div>
+        </div>
         
-
-    
+        <div class="row align-items-center">
+            <div class="col-10">
+                <div class="progress" style="height: 40px" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar text-bg-warning" style="width: 75%">75%</div>
+                </div>
+            </div>
+        </div>
+        </div>
     </div>
+
     <div class="plant col-md-6 mb-3 text-center">plant 2</div>
     <div class="plant col-md-6 mb-3 text-center">plant 3</div>
+</div>
+
+    <!-- Always the Final Plant-->
     <div class="plant-add col-md-6 mb-3 text-center" onclick="window.location = '/new_plant'"> + </div>
 </div>
 
