--- a/app/templates/plant.html
+++ b/app/templates/plant.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="container pt-4">
     <div class="container row">
-        <div class="col-2"><i class="bi bi-arrow-left-square-fill" style="font-size: 50px;"></i></div>
+        <div class="col-2"><a href="/plants"><i class="bi bi-arrow-left-square-fill" style="font-size: 50px;"></i></a></div>
         <div class="col-8 text-center">
             <h3>{{ plant.name }}</h3>
             <h4>{{ plant.type}}</h4>
