--- a/app/templates/new_plant.html
+++ b/app/templates/new_plant.html
@@ -171,6 +171,7 @@ window.addEventListener('load', function() {
           type += 'Fresh '
         }
         document.getElementById("type-mesg").innerHTML = 'Your plant has a <b>'+ type +'</b> personality';
+        document.getElementById("type").value = type
     }
 });
 
