--- a/app/templates/all_plants.html
+++ b/app/templates/all_plants.html
@@ -8,6 +8,7 @@
 {% block content %}
 <h3 style="text-align: center;">Your Plants! - {{ user.name }}</h3>
 <hr>
+    <div class="table-responsive">
 <table class="table">
     <thead>
         <tr>
@@ -34,5 +35,6 @@
         {% endfor %}
     </tbody>
 </table>
+    </div>
 <br><br>
 {% endblock %}
